--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 :root {
   --color-yellow: #ffca2f;
-  --body-bg: rgb(218, 202, 202);
+  --body-bg: rgb(240, 240, 240);
   --link-color: #0e76a8;
   --text-color: #000;
   --color-dark: #2a2a2a;
@@ -78,7 +78,6 @@ section {
   align-items: center;
   padding: 1rem 2rem;
   box-shadow: 0 4px 16px rgb(65, 65, 65);
-  position: -webkit-sticky;
   position: sticky;
   top: 0;
   height: 100px;
@@ -86,7 +85,6 @@ section {
   z-index: 999;
   color: var(--text-color);
 }
-
 .primary-header .logo {
   position: relative;
   justify-content: center;
@@ -108,7 +106,7 @@ section {
 }
 .primary-header .right .checkBtn {
   cursor: pointer;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   float: right;
   padding-right: 2.5rem;
 }
@@ -120,7 +118,7 @@ section {
 .primary-header .right .primary-navigation li a:hover {
   color: rgb(251, 163, 0);
 }
-@media (width <= 768px) {
+@media screen and (max-width: 768px) {
   .primary-header .right .checkBtn {
     display: block;
   }
@@ -146,7 +144,7 @@ section {
     transition: 0.5s ease;
   }
 }
-@media (width <= 480px) {
+@media screen and (max-width: 480px) {
   .primary-header .logo h1 {
     font-size: 1rem;
   }
@@ -167,7 +165,7 @@ section {
   padding: 0 2rem;
 }
 .section1::before {
-  content: "";
+  content: "Developer";
   position: absolute;
   right: 0;
   top: -2.5rem;
@@ -183,10 +181,7 @@ section {
   padding-bottom: 1rem;
 }
 .section1 .left img {
-  width: 300px;
-
-  z-index: 1;
-  height: 400px;
+  width: 350px;
 }
 .section1 .right {
   grid-area: two;
@@ -207,7 +202,6 @@ section {
   font-weight: bold;
 }
 .section1 .right a {
-  width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
 }
@@ -225,7 +219,7 @@ section {
   font-size: 1.5rem;
 }
 
-@media (width <= 768px) {
+@media screen and (max-width: 768px) {
   .section1 {
     grid-template-areas: "one" "two";
     padding-bottom: 2rem;
@@ -234,7 +228,7 @@ section {
     align-items: center;
   }
 }
-@media (width <= 480px) {
+@media screen and (max-width: 480px) {
   .section1 .left img {
     width: 100%;
   }
@@ -265,7 +259,7 @@ section {
   width: 2px;
   height: 35px;
 }
-@media (width <= 768px) {
+@media screen and (max-width: 768px) {
   .section2 .info-container {
     width: 100%;
     padding: 1rem;
@@ -295,7 +289,7 @@ section {
 .section3 .skills-container div span {
   color: var(--text-color);
 }
-@media (width <= 768px) {
+@media screen and (max-width: 768px) {
   .section3 .skills-container {
     gap: 2.5rem;
     flex-wrap: wrap;
@@ -314,10 +308,10 @@ section {
   color: var(--text-color);
 }
 .section4 .projects-container {
-  width: 90%;
+  width: 100%;
   padding: 3rem 2rem 0 2rem;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 2rem;
+  gap: 2.5rem;
   justify-content: space-between;
 }
 .section4 .projects-container .project-card {
@@ -338,7 +332,7 @@ section {
   margin-top: 1.2rem;
   font-weight: bold;
 }
-@media (width <= 480px) {
+@media screen and (max-width: 480px) {
   .section4 .projects-container {
     width: 100vw;
     padding: 3rem 0.5rem;
@@ -355,7 +349,7 @@ section {
   font-size: 2rem;
 }
 .section5 .about-container {
-  padding: 2rem;
+  padding: 3rem;
 }
 .section5 .about-container .left {
   width: 50%;
@@ -365,17 +359,15 @@ section {
 }
 .section5 .about-container .left .bg {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 95%;
+  height: 65%;
   background: var(--color-yellow);
-  bottom: auto;
-  top: auto;
+  bottom: 0;
   z-index: 0;
 }
 .section5 .about-container .left img {
-  width: 88%;
+  width: 100%;
   z-index: 1;
-  height: 400px;
 }
 .section5 .about-container .right {
   width: 50%;
@@ -410,7 +402,7 @@ section {
   background: rgb(189, 188, 188);
   border-radius: 0.8rem;
 }
-@media (width <= 1024px) {
+@media screen and (max-width: 1024px) {
   .section5 .about-container {
     flex-direction: column;
   }
@@ -423,7 +415,7 @@ section {
     justify-content: center;
   }
 }
-@media (width <= 480px) {
+@media screen and (max-width: 480px) {
   .section5 .about-container {
     width: 100vw;
   }
@@ -482,7 +474,7 @@ section {
 .section6 .email-section .email .send {
   color: var(--body-bg);
 }
-@media (width <= 480px) {
+@media screen and (max-width: 480px) {
   .section6 .socials {
     gap: 3rem;
   }
@@ -538,21 +530,7 @@ footer .footer-container .footer-bottom {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  -webkit-animation: arrow infinite 2s ease;
   animation: arrow infinite 2s ease;
-}
-
-@-webkit-keyframes arrow {
-  0% {
-    top: 50%;
-  }
-  50% {
-    top: 70%;
-    opacity: 0.1;
-  }
-  100% {
-    top: 40%;
-  }
 }
 
 @keyframes arrow {
@@ -566,4 +544,4 @@ footer .footer-container .footer-bottom {
   100% {
     top: 40%;
   }
-} /*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
